<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friends.manager.pages.pending.FriendsPendingFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends_request"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_incoming_pending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/friends_request_list_item"/>

            <TextView
                android:id="@+id/text_no_incoming_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/friends_no_requests"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:textColor="#AAA"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends_pending"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_outgoing_pending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/friends_pending_list_item"/>

            <TextView
                android:id="@+id/text_no_outgoing_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/friends_no_pending"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:textColor="#AAA"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
