<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:gravity="center_horizontal"
android:background="@color/colorPrimary"
android:elevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

            <EditText
                android:id="@+id/username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/prompt_username"
                android:textColor="@color/signUpText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

            <EditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:textColor="@color/signUpText"/>

        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

            <com.marlonmafra.android.widget.EditTextPassword
                android:id="@+id/password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:layout_marginTop="12dp"
                app:iconPosition="right"
                app:hidePasswordIcon="@drawable/ic_visibility_off_white_48px"
                app:showPasswordIcon="@drawable/ic_visibility_white_48px"
                app:fontPath="fonts/roboto_regular.ttf" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up_sign_up"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/text"
                android:padding="12dp"
                android:text="@string/login_sign_up"
                android:onClick="buttonCallback" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>